--- a/novikov.html
+++ b/novikov.html
@@ -61,19 +61,61 @@
         <div class="container">
           <p class="skills__title">Skills</p>
           <p class="skills__text">I work in such programs as</p>
-          <div class="skills__icon">
-         <div class="skills__icon__Photoshop>
-
-         </div>
-         <div class="skills__icon__Illustration>
-
-         </div>
-         <div class="skills__icon__Effects>
-
-         </div>
-         <div class="skills__icon__Figma>
-
-         </div>
+          <div class="skills__icons">
+            <div class="icon">
+              <img
+                src="./image/photoshop.svg"
+                alt="icon"
+                width="89"
+                height="89"
+              />
+              <p>Adobe Photoshop</p>
+              <div class="stars">
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_white.png" alt="" />
+              </div>
+            </div>
+            <div class="icon">
+              <img
+                src="./image/illustration.svg"
+                alt="icon"
+                width="89"
+                height="89"
+              />
+              <p>Adobe Illustrator</p>
+              <div class="stars">
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_white.png" alt="" />
+              </div>
+            </div>
+            <div class="icon">
+              <img src="./image/effect.svg" alt="icon" width="89" height="89" />
+              <p>Adobe After Effect</p>
+              <div class="stars">
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_white.png" alt="" />
+              </div>
+            </div>
+            <div class="icon">
+              <img src="./image/figma.svg" alt="icon" width="89" height="89" />
+              <p>Figma</p>
+              <div class="stars">
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_black.png" alt="" />
+                <img src="./image/Star_white.png" alt="" />
+              </div>
+            </div>
           </div>
         </div>
       </section>
