--- a/index.html
+++ b/index.html
@@ -141,5 +141,22 @@
         </div>
       </section>
     </main>
+    <footer id="contact">
+
+      <div class="container contact__wrapper">
+        <p class="contact__title">Contacts</p>
+        <p class="contact__text">
+          Want to know more or just chat?<!-- prettier-ignore -->
+          You are welcome!
+        </p>
+        <button class="contact__button">Send message</button>
+        <img src="./image/footer.svg" alt="" />
+        <p class="contact__footer">
+          Like me on<!-- prettier-ignore -->
+          LinkedIn, Instagram, Behance, Dribble
+        </p>
+      </div>
+      
+    </footer>
   </body>
 </html>
