--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="icon">
               <img src="./image/effect.svg" alt="icon" width="89" height="89" />
-              <p>Adobe After Effect</p>
+              <p>Adobe After&nbsp;Effect</p>
               <div class="stars">
                 <img src="./image/Star_black.png" alt="" />
                 <img src="./image/Star_black.png" alt="" />
@@ -142,21 +142,24 @@
       </section>
     </main>
     <footer id="contact">
-
-      <div class="container contact__wrapper">
+      <div class="container">
         <p class="contact__title">Contacts</p>
         <p class="contact__text">
           Want to know more or just chat?<!-- prettier-ignore -->
           You are welcome!
         </p>
         <button class="contact__button">Send message</button>
-        <img src="./image/footer.svg" alt="" />
+        <div class="footer__icon">
+          <img src="./image/footer1.svg" height="40" weight="40" alt="" />
+          <img src="./image/footer2.svg" height="40" weight="40" alt="" />
+          <img src="./image/footer3.svg" height="40" weight="40" alt="" />
+          <img src="./image/footer4.svg" height="40" weight="40" alt="" />
+        </div>
         <p class="contact__footer">
           Like me on<!-- prettier-ignore -->
           LinkedIn, Instagram, Behance, Dribble
         </p>
       </div>
-      
     </footer>
   </body>
 </html>
