--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </section>
       <section id="about">
         <div class="container">
-          <p class="about__title">About me</p>
+          <h2 class="about__title">About me</h2>
           <div class="about__text">
             <p>
               Hi,I'm Denis – UX/UI designer from Minsk.<!-- prettier-ignore -->
@@ -59,7 +59,7 @@
       </section>
       <section id="skills">
         <div class="container">
-          <p class="skills__title">Skills</p>
+          <h2 class="skills__title">Skills</h2>
           <p class="skills__text">I work in such programs as</p>
           <div class="skills__icons">
             <div class="icon">
@@ -122,7 +122,7 @@
       <section id="portfolio">
         <div class="container">
           <div class="portfolio__item">
-            <p class="portfolio__title">Portfolio</p>
+            <h2 class="portfolio__title">Portfolio</h2>
             <img src="./image/portfolio1.webp" width="940" height="512" />
             <p class="portfolio__subtitle">Online fashion store - Homepage</p>
           </div>
