--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav>
           <ul class="header__list">
             <a href="#home"><li class="header__item">Home</li></a>
-            <a href="#"><li class="header__item">About me</li></a>
-            <a href="#"><li class="header__item">Skills</li></a>
-            <a href="#"><li class="header__item">Portfolio</li></a>
-            <a href="#"> <li class="header__item">Contacts</li></a>
+            <a href="#about"><li class="header__item">About me</li></a>
+            <a href="#skills"><li class="header__item">Skills</li></a>
+            <a href="#portfolio"><li class="header__item">Portfolio</li></a>
+            <a href="#contact"> <li class="header__item">Contacts</li></a>
           </ul>
         </nav>
       </div>
@@ -150,10 +150,10 @@
         </p>
         <button class="contact__button">Send message</button>
         <div class="footer__icon">
-          <img src="./image/footer1.svg" height="40" weight="40" alt="" />
-          <img src="./image/footer2.svg" height="40" weight="40" alt="" />
-          <img src="./image/footer3.svg" height="40" weight="40" alt="" />
-          <img src="./image/footer4.svg" height="40" weight="40" alt="" />
+          <a href=""><img src="./image/footer1.svg" height="40" weight="40" alt="" /></a>
+          <a href=""><img src="./image/footer2.svg" height="40" weight="40" alt="" /></a>
+          <a href=""><img src="./image/footer3.svg" height="40" weight="40" alt="" /></a>
+          <a href=""><img src="./image/footer4.svg" height="40" weight="40" alt="" /></a>
         </div>
         <p class="contact__footer">
           Like me on<!-- prettier-ignore -->
