--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container">
         <nav>
           <ul class="header__list">
-            <a href="#home"><li class="header__item">Home</li></a>
-            <a href="#about"><li class="header__item">About me</li></a>
-            <a href="#skills"><li class="header__item">Skills</li></a>
-            <a href="#portfolio"><li class="header__item">Portfolio</li></a>
-            <a href="#contact"> <li class="header__item">Contacts</li></a>
+            <li class="header__item"><a href="#home">Home</a></li>
+            <li class="header__item"><a href="#about">About me</a></li>
+            <li class="header__item"><a href="#skills">Skills</a></li>
+            <li class="header__item"><a href="#portfolio">Portfolio</a></li>
+            <li class="header__item"><a href="#contact">Contacts</a></li>
           </ul>
         </nav>
       </div>
@@ -29,12 +29,10 @@
             <p>UX | UI designer &emsp; 24 years old, Minsk</p>
           </div>
           <div class="home__image">
-            <img
-              src="./image/home.webp"
-              alt="image"
-              width="940"
-              height="387px"
-            />
+            <img src="./image/home.webp" alt="image" />
+          </div>
+          <div class="home__image__small">
+            <img src="./image/home_huge.webp" alt="image" />
           </div>
         </div>
       </section>
@@ -150,10 +148,18 @@
         </p>
         <button class="contact__button">Send message</button>
         <div class="footer__icon">
-          <a href=""><img src="./image/footer1.svg" height="40" weight="40" alt="" /></a>
-          <a href=""><img src="./image/footer2.svg" height="40" weight="40" alt="" /></a>
-          <a href=""><img src="./image/footer3.svg" height="40" weight="40" alt="" /></a>
-          <a href=""><img src="./image/footer4.svg" height="40" weight="40" alt="" /></a>
+          <a href=""
+            ><img src="./image/footer1.svg" height="40" weight="40" alt=""
+          /></a>
+          <a href=""
+            ><img src="./image/footer2.svg" height="40" weight="40" alt=""
+          /></a>
+          <a href=""
+            ><img src="./image/footer3.svg" height="40" weight="40" alt=""
+          /></a>
+          <a href=""
+            ><img src="./image/footer4.svg" height="40" weight="40" alt=""
+          /></a>
         </div>
         <p class="contact__footer">
           Like me on<!-- prettier-ignore -->
