--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <div class="container">
         <nav>
           <ul class="header__list">
-            <li class="header__item"><a href="#home">Home</a></li>
-            <li class="header__item"><a href="#about">About me</a></li>
-            <li class="header__item"><a href="#skills">Skills</a></li>
-            <li class="header__item"><a href="#portfolio">Portfolio</a></li>
-            <li class="header__item"><a href="#contact">Contacts</a></li>
+            <li><a class="header__item" href="#home">Home</a></li>
+            <li><a class="header__item" href="#about">About me</a></li>
+            <li><a class="header__item" href="#skills">Skills</a></li>
+            <li><a class="header__item" href="#portfolio">Portfolio</a></li>
+            <li><a class="header__item" href="#contact">Contacts</a></li>
           </ul>
         </nav>
       </div>
@@ -69,11 +69,11 @@
               />
               <p>Adobe Photoshop</p>
               <div class="stars">
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_white.png" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/whitestar.svg" alt="" />
               </div>
             </div>
             <div class="icon">
@@ -85,33 +85,33 @@
               />
               <p>Adobe Illustrator</p>
               <div class="stars">
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_white.png" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/whitestar.svg" alt="" />
               </div>
             </div>
-            <div class="icon">
+            <div class="icon icon_3">
               <img src="./image/effect.svg" alt="icon" width="89" height="89" />
               <p>Adobe After&nbsp;Effect</p>
               <div class="stars">
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_white.png" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/whitestar.svg" alt="" />
+                <img src="./image/whitestar.svg" alt="" />
               </div>
             </div>
-            <div class="icon">
+            <div class="icon icon_4">
               <img src="./image/figma.svg" alt="icon" width="89" height="89" />
               <p>Figma</p>
               <div class="stars">
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_black.png" alt="" />
-                <img src="./image/Star_white.png" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/blackstar.svg" alt="" />
+                <img src="./image/whitestar.svg" alt="" />
               </div>
             </div>
           </div>
@@ -122,7 +122,7 @@
           <div class="portfolio__item">
             <h2 class="portfolio__title">Portfolio</h2>
             <img src="./image/portfolio1.webp" width="940" height="512" />
-            <p class="portfolio__subtitle">Online fashion store - Homepage</p>
+            <a class="portfolio__subtitle"> Online fashion store - Homepage</a>
           </div>
           <div class="portfolio__item">
             <img src="./image/reebok_web.webp" width="940" height="524" />
@@ -143,22 +143,18 @@
       <div class="container">
         <p class="contact__title">Contacts</p>
         <p class="contact__text">
-          Want to know more or just chat?<!-- prettier-ignore -->
+          Want to know more or just chat?
           You are welcome!
         </p>
         <button class="contact__button">Send message</button>
         <div class="footer__icon">
-          <a href=""
-            ><img src="./image/footer1.svg" height="40" weight="40" alt=""
+          <a href="#"><img src="./image/footer1.svg" height="40" weight="40" alt=""
           /></a>
-          <a href=""
-            ><img src="./image/footer2.svg" height="40" weight="40" alt=""
+          <a href="#"><img src="./image/footer2.svg" height="40" weight="40" alt=""
           /></a>
-          <a href=""
-            ><img src="./image/footer3.svg" height="40" weight="40" alt=""
+          <a href="#"><img src="./image/footer3.svg" height="40" weight="40" alt=""
           /></a>
-          <a href=""
-            ><img src="./image/footer4.svg" height="40" weight="40" alt=""
+          <a href="#"><img src="./image/footer4.svg" height="40" weight="40" alt=""
           /></a>
         </div>
         <p class="contact__footer">
